# LexicalAnalyzer

./: CMakeLists.txt  input.txt  main.cpp  out.txt  readme.md
Analyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h
FileProcess/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
Pair/: Pair.cpp  Pair.h
